# EmbeddedCli

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  License.md  Makefile  README_BUILD.md  ReadMe.md  Shell.c  Shell.h  main.c  project.yml
Cli/: Cli.c  Cli.h  CliBindings.c
MemfaultCli/: .gitignore  CustomAssert.h  Makefile  Shell.c  ShellCommands.c  main.c
docs/: Doxyfile
example/: host.c
src/: Cli.c  Cli.h  Shell.c  Shell.h
test/: test_Cli.c  test_Shell.c
test/support/: dummy.md
